[package]
name = "moniteur"
version = "0.1.1"
edition = "2024"

[dependencies]
moniteur-macros = { path = "../moniteur-macros" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
